home-infra/kubernetes/netdata/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: netdata-web
  namespace: netdata-app
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mydomain.com`)
      kind: Rule
      services:
        - name: netdata-app
          port: 19999
